crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__fragment_recursion_direct.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    FragmentCycle(
        "concertFields",
        Pos(9:17),
    ),
)
