crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__introspection_query_depth_limit_direct.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
assertion_line: 656
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "__schema",
                ),
                arguments: {},
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "types",
                        ),
                        arguments: {},
                        subfields: [
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "name",
                                ),
                                arguments: {},
                                subfields: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
