crates/core-subsystem/core-resolver/src/validation/snapshots/core_resolver__validation__document_validator__tests__invalid_subfield.snap
---
source: resolver/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    InvalidField(
        "foobar",
        "Concert",
        Pos(6:21),
    ),
)
